--- a/estilo.css
+++ b/estilo.css
@@ -9,10 +9,7 @@ html, body {
     font-family: Roboto;
     color: white;
 }
-body {
-    background: linear-gradient(to top, rgba(14, 1, 6, 0.875), rgb(92, 92, 92));
-    background-size: cover;
-}
+
 h2 {
     text-align: center;
 }
@@ -72,7 +69,7 @@ form input[type=submit] {
 }
 
 form input[type=submit]:hover {
-    background: rgb(43, 242, 8);
+    background: rgb(18, 73, 8);
     color:white;
     padding: 10px;
     border-radius: 10px;
@@ -80,7 +77,7 @@ form input[type=submit]:hover {
     cursor:pointer;
 }
 form input[type=reset] {
-    background: black;
+    background:#00ff00;
     color:white;
     padding: 10px;
     border-radius: 10px;
@@ -96,3 +93,40 @@ form input[type=reset]:hover {
     border:none;
     cursor:pointer;
 }
+
+.headersite {
+    background-color: rgb(19,19,19);
+    color: white;
+    width: 100%;
+    height: 10%;
+
+}
+
+.footersite {
+    background-color: rgb(19,19,19);
+    color: white;
+    width: 100%;
+    height: 10%;
+}
+
+body {
+    display: flex; /* Torna o body um container flexível */
+    justify-content: center; /* Centraliza os itens horizontalmente */
+    align-items: center; /* Centraliza os itens verticalmente */
+    min-height: 100vh; /* Garante que o body ocupe toda a altura da viewport */
+    margin: 0; /* Remove margens padrão do body */
+  }
+
+  .cardbox {
+    display: flex; /* Torna a div container um container flexível */
+    gap: 20px; /* Espaçamento entre as divs filhas (opcional) */
+    width: 100%;
+    background-color: white;
+  }
+
+  .card {
+    background-color: #00ff00;
+    color: white;
+    padding: 20px;
+    text-align: center;
+  }
